--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^5.0.2
   equatable: ^2.0.3
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
