--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
   hive_generator: ^1.1.3
+  mocktail: ^0.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
